# rl_agent_foundations

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.sh  setup.sh
dashboard/: app.py  callbacks.py  data_feed.py  styles.py  theme.py
dashboard/layouts/: logs.py  measures.py  overview.py  patient_journey.py  realtime.py  state_machine.py  training.py
datagen/: action_eligibility.py  archetypes.py  constants.py  gap_closure.py  generator.py  historical_activity.py  patients.py  state_features.py
deploy/: Dockerfile  inference_server.py  nightly_job.py  openapi.yaml
docs/: action_eligibility_schema.tsv  action_space_taxonomy.tsv  feature_definitions.tsv  feature_definitions_detailed.tsv  hedis_measures_reference.tsv
environment/: action_masking.py  action_space.py  hedis_env.py  reward.py  state_space.py
models/: dynamics_model.py  reward_model.py  train_dynamics.py  train_reward.py
scripts/: generate_data.py  run_dashboard.py  run_simulation.py  train_agent.py  train_world_models.py
simulation/: action_state_machine.py  daily_cycle.py  lagged_rewards.py  logger.py  loop.py  metrics.py  nightly_cycle.py  world.py
tests/: conftest.py  test_datagen.py  test_environment.py  test_integration.py  test_simulation.py  test_training.py
training/: behavior_cloning.py  cql_trainer.py  data_loader.py  evaluation.py
