[project]
name = "rl-agent-foundations"
version = "0.1.0"
description = "CQL offline RL agent for Medicare Advantage STARS gap closure optimization"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
